# cg-hs2019

Serie 0/assignment_00/assignment0_kiener_portmann/: readme.txt  solid_color.sce
Serie 0/scenes/spheres/: spheres.sce
Serie 0/src/: Cylinder.cpp  Material.h  Plane.cpp  Sphere.cpp
Serie 12/assignment_12/: readme.txt
Serie 12/assignment_12 - Ann_Joana/: README.md
Serie 12/assignment_12 - Ann_Joana/src/: earth.frag  earth.vert  solar_viewer.cpp  texture.cpp
Serie 12/assignment_12/src/: bezier.cpp  earth.frag  earth.vert  phong.frag  solar_viewer.cpp  solar_viewer.h  sphere.cpp  sphere.h  sun.frag  sun.vert  texture.cpp
Serie 2/assignment2_kiener_portmann/: Scene.cpp  readme.txt
Serie 2/assignment2_kiener_portmann/Screenshots/: perfect_mirror_spheres.tga
Serie 3/assignment3_kiener_portmann/: readme.txt  toon_faces_debug.sce
Serie 3/assignment3_kiener_portmann/outputs/: cube.tga  mask.tga  office.tga  rings.tga  toon_faces0.tga  toon_faces_correct.tga
Serie 4/assignment4_kiener_portmann/: readme.txt
Serie 4/assignment4_kiener_portmann/glfw-3.3/: README.md
Serie 4/assignment4_kiener_portmann/glfw-3.3/examples/: CMakeLists.txt  tinyexpr.c
Serie 4/assignment_4/src/: solar_viewer.cpp
Serie 5/assignment5_kiener_portmann/: readme.txt  solar_viewer.cpp  solar_viewer.h
Serie 5/assignment_5/src/: solar_viewer.cpp
Serie 6/assignment_06/assignment_6/: README.md  readme.txt
Serie 6/kiener_portmann_assignment6/: earth.vert  phong.frag  readme.txt
Serie 7/assignment7_kiener_portmann/: Mesh.cpp  ShadowViewer.cpp  phong_shadow.frag  readme.txt  shadowmap_gen.frag
Serie 7/assignment_7/src/: ShadowViewer.cpp
Serie 8/assignment8_kiener_portmann/: lsystem.cpp  readme.txt
Serie 8/assignment8_kiener_portmann/data_out/: stochastic_00.txt  stochastic_01.txt  stochastic_02.txt
Serie 8/assignment_8/data_out/: stochastic_00.txt  stochastic_01.txt  stochastic_02.txt
Serie 8/assignment_8/src/: lsystem.cpp  (+1 more)
Serie 9/assignment9_kiener_portmann/: MeshViewer.cpp  readme.txt
Serie 9/assignment_9/: CMakeLists.txt
(+31 files in other folders)
